tests/testData/graphql/frameworks/federation/resolve/QueryExtensionsOnlyOnRootLevel.graphql
type Query {}

{
    _service {
        sdl
        <error descr="Unknown field \"_service\" on object type \"_Service\"">_service</error> {
            <error descr="Unknown field \"sdl\": The parent selection or operation does not resolve to a valid schema type">sdl</error>
        }
    }
}
